# galis

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dataset.py  demo.py  galis_app.py  pyproject.toml  temp.py  train.py
dataset/: ogbn_link_pred_dataset.py
llm/: related_work_generator.py
model/: cos-sim.py  mlp.py  paper_similarity.py  simple_gcn_model.py  train.py
predictor/: link_predictor.py
