[project]
name = "galis"
version = "0.1.0"
description = ""
authors = [
    {name = "Perunio",email = "divodar@protonmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

pandas = ">=2.3.1,<3.0.0"
streamlit = ">=1.47.1,<2.0.0"
numpy = ">=2.3.2,<3.0.0"
ogb = ">=1.3.6,<2.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
streamlit-extras = ">=0.7.5,<0.8.0"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.3.1%2Bcu118-cp312-cp312-linux_x86_64.whl" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

