[tool.poetry]
name = "galis"
version = "0.1.0"
description = ""
authors = ["Perunio <divodar@protonmail.com>"]
readme = "README.md"
packages = [{include = "galis"}]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.14"
torch = {version = "2.3.1+cu121", source = "pytorch"}
torchvision = {version = "0.18.1+cu121", source = "pytorch"}
torchaudio = {version = "2.3.1+cu121", source = "pytorch"}
ogb = "^1.3.6"
torch-geometric = "^2.6.1"
pandas = "^2.3.1"
streamlit = "^1.46.1"
numpy = "1.26.4"
streamlit-extras = "^0.7.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"