[tool.poetry]
name = "galis"
version = "0.3.0"
description = ""
authors = ["Perunio <divodar@protonmail.com>"]
readme = "README.md"
packages = [{include = "galis"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

torch = [
    {version = "2.3.1+cu121", source = "pytorch-cuda", markers = "sys_platform == 'linux' or sys_platform == 'win32'"},
    {version = "^2.3.1", source = "pytorch-cpu", markers = "sys_platform == 'darwin'"}
]

ogb = "^1.3.6"
torch-geometric = "^2.6.1"
pandas = "^2.3.1"
streamlit = "^1.46.1"
numpy = "1.26.4"
streamlit-extras = "^0.7.5"
sentence-transformers = "2.7.0"
transformers = "4.39.3"
ruff = "^0.12.7"
structlog = "^25.4.0"
langchain-google-genai = "^2.1.9"
langchain-core = "^0.3.72"
langchain = "^0.3.27"
python-dotenv = "^1.1.1"
hf-transfer = "^0.1.9"
mlflow = "^3.2.0"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"